--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 100vh;
+}
+
+.error {
+  color: red;
+}
+
+.form {
+  background-color: rgb(236, 236, 236);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  padding: 3rem;
+  box-sizing: border-box;
+  width: 550px
+}
+
+.fieldset {
+  padding: 2rem 4rem;
+}
+
+.flex-end {
+  display: flex;
+  justify-content: flex-end;
+}
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+}
+.button {
+  padding: 0.5rem 1.2rem;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.button:hover {
+  opacity: 0.9;
+}
+.primary {
+  background-color: rgb(46 114 249);
+}
+.info {
+  background-color: #33b5e5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.full-width {
+  width: 100%;
 }
